# advent_of_code_2022

./: .gitignore  pyproject.toml
day_01/: main.py  test_main.py
solutions/: _template.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_07b.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_14b.py  day_15.py
tests/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_15.py
