[tool.poetry]
name = "advent_of_code_2022"
version = "0.1.0"
description = ""
authors = ["Jean Nassar <jn.masasin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
pandas = "^1.5.2"
seaborn = "^0.12.1"
simplematch = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
